2016-05-10 Albert Chu <chu11@llnl.gov>

	* bmc-device/: Support --read-fru and --device-id option.

	* libfreeipmi/: Add ipmi_fru_open_device_id_with_buffer function.

	* ipmi-fru/: Add --fru-file option.

	* libfreeipmi/: Add ipmi_cmd_write_fru_data function.

2016-05-04 Albert Chu <chu11@llnl.gov>

	* man/ipmi-fru.8.pre.in, man/bmc-device.8.pre.in: Minor fixes

2016-03-09 Maksym Planeta <mcsim.planeta@gmail.com>

	* libfreeipmi/driver/ipmi-inteldcmi-driver.c,
	libfreeipmi/driver/ipmi-openipmi-driver.c,
	libfreeipmi/driver/ipmi-ssif-driver.c,
	libfreeipmi/driver/ipmi-sunbmc-driver.c: Set FD_CLOEXEC on device
	driver opened files.

2016-02-03 Albert Chu <chu11@llnl.gov>
	
	* common/miscutil/conffile.h: Increase CONFFILE_MAX_ARGLEN from
	512 to 1024 to support long hostname arguments in ipmiseld config
	file.

2015-12-01  Albert Chu <chu11@llnl.gov>

        * NEWS, configure.ac: Update for release.

        * Tagged freeipmi-1-5-1

2015-11-04 Albert Chu <chu11@llnl.gov>

	* configure.ac, freeipmi.spec.in: Add systemd support.

2015-11-02 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/sel/ipmi-sel-string.c: Code cleanup.
	
2015-10-29 Albert Chu <chu11@llnl.gov>

	* configure.ac: Update library versions for eventually 1.5 release.
	
2015-10-29 Albert Chu <chu11@llnl.gov>

	* ipmi-oem/ipmi-oem-intelnm.c: Fix typo.

	* ipmi-oem/ipmi-oem-intelnm.c: Fix logic error in searching code in various "get" functions.

	* ipmi-oem/ipmi-oem-intelnm.c: Fix logic errors in new command additions.

	* libfreeipmi/cmds/ipmi-oem-intel-node-manager-cmds.c: Fix error in new templates. 
	
2015-10-29 Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.texi: URL updates and minor doc update.
	
2015-10-28 Albert Chu <chu11@llnl.gov>

	* Add warnings to deprecated header files.

	* Various code cleanup.
	
2015-10-27 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/templates/: Move some files to oem subdirectory.

	* freeipmi.spec.in: Update for new header directories.
